# mymise

./: .gitignore  .plane.json  AGENTS.md  Architecture.md  Braindump.md  PRD.md  README.md  mise.toml  pyproject.toml
.augment/commands/bmad/workflows/: custom-ticket-lifecycle.md
.claude/: tts-voice.txt
.claude/config/: audio-effects.cfg
.codex/prompts/: bmad-custom-workflows-README.md
.gemini/commands/: bmad-workflow-custom-ticket-lifecycle.toml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/custom/custom/workflows/ticket-lifecycle/: workflow.md
_bmad/_config/custom/custom/workflows/ticket-lifecycle/steps-c/: step-01-init.md
_bmad/_config/custom/custom/workflows/ticket-lifecycle/steps-v/: step-01-validate.md
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/custom/workflows/ticket-lifecycle/: workflow-plan-ticket-lifecycle.md
_bmad/custom/workflows/ticket-lifecycle/data/: event-schemas.md
src/mymise/: __init__.py  cli.py  models.py  registrar.py  resolver.py  scanner.py  utils.py
src/mymise/collectors/: __init__.py  apt.py  base.py  cargo.py  go.py  history.py  mise.py  npm.py  path.py  pipx.py  snap.py  uv.py
tests/: conftest.py  test_cli.py  test_models.py  test_utils.py
