[project]
name = "mymise"
version = "0.1.0"
description = "Reverse-engineer your CLI toolchain from shell history and resolve against mise registry"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"

dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.6.0",
    "rich>=13.7.0",
]

[project.scripts]
mymise = "mymise.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mymise"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
